Align any-hover:none behavior to current specification.

The spec was updated some time ago clarifying how
any-hover: none should match (see
https://github.com/w3c/csswg-drafts/commit/98f494677a265df504eee67d587329478b8ce6ba).
This patch aligns the behavior with the spec clarification
by making sure that 'any-hover:none' will only evaluate to
true if there are no pointing devices, or if all the pointing
devices present lack hover capabilities.

The previous implementation was reading the specification
litterally by returning the union of the capabilities of
the input devices connected on the machine.

Windows, Linux and Android are now updated in this patch.

This technically has a compatibility impact as we're changing
behavior but @rbyers and myself did a rapid search of top websites
 and didn't find anything relevant to the change.

BUG=778694

Change-Id: I230a44f29707e660515b4d27a1bc88552aa73032